--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Бандерогусь</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
       rel="stylesheet"
-    />
-    <link rel="preload" href="./img/gus-anim.gif" as="image" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    >
+    <link rel="preload" href="./img/gus-anim.gif" as="image">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <section class="main-page">
       <div class="wrapper">
-        <img src="./img/logo_black.svg" alt="GOIT logo" class="goit-logo" />
+        <img src="./img/logo_black.svg" alt="GOIT logo" class="goit-logo">
         <div class="main-page-content">
           <div class="main-page-text-container">
             <p class="main-page-hello-text">Доброго вечора, ми з України</p>
@@ -30,18 +30,14 @@
               Запустити гуся
             </button>
           </div>
-          <img
-            src="./img/gus.svg"
-            alt="Бандерогусь"
-            class="main-page-gus-img"
-          />
+          <img src="./img/gus.svg" alt="Бандерогусь" class="main-page-gus-img">
         </div>
       </div>
     </section>
 
     <section class="facts">
       <div class="wrapper">
-        <img src="./img/trezub.svg" alt="Тризуб" class="facts-trezub" />
+        <img src="./img/trezub.svg" alt="Тризуб" class="facts-trezub">
         <h2 class="facts-title">Цікаві факти про бандерогусей</h2>
         <p class="facts-descr">
           Зазвичай бандерогуси — виключно мирні птахи. Але у разі небезпеки
@@ -50,7 +46,7 @@
         </p>
         <div class="facts-items">
           <div class="facts-item">
-            <img src="./img/gus1.svg" alt="Система навігації" />
+            <img src="./img/gus1.svg" alt="Система навігації">
             <h3 class="facts-item-title">Система навігації</h3>
             <p class="facts-item-decr">
               Супутниковий GPS та ехолокатори розпізнають ворожу техніку навіть
@@ -58,7 +54,7 @@
             </p>
           </div>
           <div class="facts-item">
-            <img src="./img/gus2.svg" alt="Очі-тепловізори" />
+            <img src="./img/gus2.svg" alt="Очі-тепловізори">
             <h3 class="facts-item-title">Очі-тепловізори</h3>
             <p class="facts-item-decr">
               Допомагають виявити характер сигнатури об'єктів та значно
@@ -66,7 +62,7 @@
             </p>
           </div>
           <div class="facts-item">
-            <img src="./img/gus3.svg" alt="Байракрила" />
+            <img src="./img/gus3.svg" alt="Байракрила">
             <h3 class="facts-item-title">Байракрила</h3>
             <p class="facts-item-decr">
               Можуть нести 2-4 керовані ракети, що вражають ціль на відстані
@@ -80,7 +76,7 @@
     <section class="form-container">
       <div class="wrapper">
         <form action="#" class="form" id="form">
-          <img src="./img/trezub.svg" alt="Тризуб" class="form-trezub" />
+          <img src="./img/trezub.svg" alt="Тризуб" class="form-trezub">
           <h4 class="form-title">Поділися, будь ласка, поштою</h4>
           <p class="form-descr">та запиши гуся до бандерозагону</p>
           <div class="form-field form-field-name">
@@ -92,7 +88,7 @@
               class="form-input"
               placeholder="Введіть Ваше ім'я, будь ласка"
               required
-            />
+            >
           </div>
           <div class="form-field form-field-email">
             <label for="user-email" class="form-field-label">Email</label>
@@ -103,7 +99,7 @@
               class="form-input"
               placeholder="Введіть Ваш Email, будь ласка"
               required
-            />
+            >
           </div>
           <button type="submit" class="form-btn" id="launch-btn">
             Запустити гуся
